# Chronikis

./: .gitignore  README.md  chronikis_0.2.1.tgz  docker.md  index.md
.github/: CONTRIBUTING.md
Notes/: covfct.R  simplify_diag.lyx  simplify_vec.lyx  stan-functions.txt  truncated-exponential-mean-parameterization.lyx  truncated-exponential.R
chronikis/: .dockerignore  DESCRIPTION  NAMESPACE
chronikis/R/: estimation.R  forecasting.R  ssm-creation-utils.R
chronikis/man/: average_normals.Rd  averagedLL.Rd  bdiag_from_arr3.Rd  cksCompile.Rd  diagv.Rd  exponential_mt_rate.Rd  filter_models.Rd  forecast_intervals.Rd  forecast_sample.Rd  hmc_estimate.Rd  map_estimate.Rd  mdlArgs.Rd  num_draws.Rd  posterior_sample.Rd  setArgs.Rd  setArgsList.Rd  smoothed_components.Rd  smoothed_ts.Rd  update_models.Rd  vb_estimate.Rd
chronikis/tests/: testthat.R
chronikis/tests/testthat/: fit1.rds  hmcsamp1.rds  setup_omits.R  test-estimation.R  test-forecasting.R  test-ssm-creation-utils.R
compiler/: .dockerignore  compiler.cabal  stack.yaml
compiler/Acceptance/: day-in-week-periodicity.cks  functions.cks  llar1-a.cks  llar1-a1.cks  llar1-a2.cks  llar1-b.cks  llrw.cks  lltar1-a.cks  lltrw.cks  runacctest.sh  synthetic_data_tests.R  wn.cks
compiler/Acceptance/Reference/: day-in-week-periodicity.R  day-in-week-periodicity.stan  functions.R  functions.stan  llar1-a.R  llar1-a.stan  llar1-a1.R  llar1-a1.stan  llar1-a2.R  llar1-a2.stan  llar1-b.R  llar1-b.stan  llrw.R  llrw.stan  lltar1-a.R  lltar1-a.stan  lltrw.R  lltrw.stan  wn.R  wn.stan
compiler/app/: Main.hs
compiler/src/: AST.hs  BasicExpr.hs  BasicModel.hs  Checks.hs  Env.hs  InferShapesBounds.hs  InferShapesBoundsImpl.hs  Misc.hs  NameGen.hs  Number.hs  ParseFctDef.hs  Parser.hs  Periodic.hs  RAST.hs  RNames.hs  SSM.hs  SSMConstruction.hs  StanAST.hs  StanASTImpl.hs  Transforms.hs  TransformsImpl.hs  TranslToR.hs  Translate.hs  TranslateImpl.hs  Unique.hs
compiler/test/: ASTSpec.hs  BasicExprSpec.hs  BasicModelSpec.hs  ChecksSpec.hs  EnvSpec.hs  InferShapesBoundsSpec.hs  NameGenSpec.hs  NumberSpec.hs  ParserSpec.hs  PeriodicSpec.hs  RASTSpec.hs  RNamesSpec.hs  SSMConstructionSpec.hs  Spec.hs  StanASTSpec.hs  TransformsSpec.hs  TranslToRSpec.hs  TranslateSpec.hs
doc/: chronikis-manual.lyx
docs/: Chronikis_Presentation_190206.pptx  index.md
